--- a/index.html
+++ b/index.html
@@ -28,21 +28,14 @@
           <div class="col-lg-12 my-auto">
           	<!-- Begin MailChimp Signup Form -->
 <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
-<style type="text/css">
-	
-	/* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
-	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
-</style>
+<style type="text/css"></style>
 <div id="mc_embed_signup">
 <form action="https://iBrain.us19.list-manage.com/subscribe/post?u=4f6a849087b73e5442054a395&amp;id=6847078140" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
     <div id="mc_embed_signup_scroll">
 	
 
 
-	<div id="mce-responses" class="clear">
-		<div class="response" id="mce-error-response" style="display:none"></div>
-		<div class="response" id="mce-success-response" style="display:none"></div>
-	</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+   <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
     <!-- <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_4f6a849087b73e5442054a395_6847078140" tabindex="-1" value=""></div> -->
     <div class="clear"><input class="btn btn-primary btn-xl" type="submit" value="Be CraZy!" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
     </div>
