--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
 	
 	
     <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_4f6a849087b73e5442054a395_6847078140" tabindex="-1" value=""></div>
-    <div class="clear"><input class="btn btn-primary btn-xl" type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+   
+    <div class="clear"><input class="btn btn-primary btn-xl" type="submit" value="Subscribe" name="subscribe"  class="button"></div>
     </div>
 </form>
 </div>
@@ -67,3 +67,6 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script> -->
 </body>
 </html>
+
+
+<!-- id="mc-embedded-subscribe" -->
